--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
@@ -37,6 +37,11 @@ sup {
     border-left: 1px solid black;
     border-right: 1px solid black;
   }
+
+  .lt-ie9 & {
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+  }
 }
 
 #main {
