--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_micro_teaser.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_micro_teaser.scss
@@ -37,5 +37,20 @@
         clear: left;
       }
     }
+
+    .lt-ie9 & {
+      .view-mode-micro_teaser {
+        border-bottom: none;
+        .listing-title {
+          font-size: .75 * $font_size_title;
+        }
+      }
+      width: 32%;
+      float: left;
+      margin-right: 1%;
+      margin-left: 0;
+      height: 380px;
+      overflow: hidden;
+    }
   }
 }
