Adding blank fields to the printable form

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -89,6 +89,7 @@ $output: 'isolation';
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+          min-height: 30px;
         }
       }
 
