Improving the landing page styling

--- a/docroot/sites/all/themes/escrow/sass/partials/components/forms/_forms.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/forms/_forms.scss
@@ -28,6 +28,12 @@ button {
   .form-required {
     display: none;
   }
+  .form-type-select {
+    label,
+    select {
+      display: inline;
+    }
+  }
 }
 
 #user-login {
