Making certain "outside features" dont get cut off

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -93,7 +93,8 @@ $output: 'isolation';
         }
       }
 
-      &.field-name-field-listing-personal-property {
+      &.field-name-field-listing-personal-property,
+      &.field-name-field-listing-outside-features {
         .field-items {
           width: 100%;
           display: block;
