Styling the links on dynamic lead

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_teaser.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_teaser.scss
@@ -25,6 +25,11 @@
     padding: .5 * $spacing_default 0;
     margin-left: $spacing_default;
 
+    a {
+      color: $color_gray_dark;
+      text-decoration: underline;
+    }
+
     .label-inline {
       color: darken($color_gold, 10%);
       font-weight: bold;
