Tweaking the css on MLS listing pages

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_drealty_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_drealty_listing.scss
@@ -1,6 +1,12 @@
 .entity-drealty-listing {
+  .listing {
+    .group-listing-statistics {
+      margin-top: 0;
+    }
+  }
+
   .photos {
-    max-height: 25em;
+    max-height: 40em;
     overflow: auto;
 
     @include breakpoint($bp500) {
