--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -50,12 +50,12 @@
       background: url("../images/loading.gif") center center no-repeat;
       background-size: 50%;
       background-color: $color_gray_light;
+    }
 
-      &.no-map {
-        background: url("../images/no-map.jpg") center center no-repeat;
-        background-size: 100%;
-        background-clip: content-box;
-      }
+    .no-map {
+      background: url("../images/no-map.jpg") center center no-repeat;
+      background-size: 100%;
+      background-clip: content-box;
     }
   }
 
