--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_horizontal_scroller.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_horizontal_scroller.scss
@@ -15,6 +15,7 @@
       display: inline-block;
       width: 10em; /* Typically this will be changed on a one-off basis. */
       margin: 0 $spacing_default 0 0;
+      vertical-align: top;
 
       &:last-child {
         margin-right: 0;
