Making seller names easier to read on PDF

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -187,6 +187,11 @@ $output: 'isolation';
           margin: 0;
           border: none;
 
+          .seller-first-name,
+          .seller-last-name {
+            font-weight: bold;
+            padding-right: $spacing_default;
+          }
           .phone-number,
           .email {
             display: inline-block;
