simplifying the PDF by adding a "multiline" class

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -93,9 +93,7 @@ $output: 'isolation';
         }
       }
 
-      &.field-name-field-listing-personal-property,
-      &.field-name-field-listing-outside-features,
-      &.field-name-field-listing-directions {
+      &.multiline {
         .field-items {
           width: 100%;
           display: block;
