Removing opacity from PDF

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -282,7 +282,7 @@ $output: 'isolation';
     .field-name-field-listing-sq-ft-finished,
     .field-name-field-listing-sq-ft-total,
     .measurements-grid {
-      opacity: 0.25;
+      display: none;
     }
   }
 }
