Hding year and lockbox on land listing PDFs

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -268,6 +268,8 @@ $output: 'isolation';
     .field-name-field-listing-insulation,
     .field-name-field-listing-siding-info,
     .field-name-field-listing-fireplace-info,
+    .field-name-field-listing-year-built,
+    .field-name-field-listing-lockbox-key,
     .field-name-field-listing-garage,
     .field-name-field-listing-basement,
     .field-name-field-listing-windows,
