--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -13,10 +13,15 @@
   float: left;
 }
 
+.node-listing-form .field-name-field-listing-measurements {
+  display: none;
+}
+.node-listing-form .field-name-field-listing-measurements td,
 .node-listing-form .rooms td {
   padding: 5px;
   max-width: 100px;
 }
+.node-listing-form .field-name-field-listing-measurements td:first-child,
 .node-listing-form .rooms td:first-child {
   width: 20%;
   font-weight: bold;
