Replace measurements fields with a single grid field

--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -13,8 +13,9 @@
   float: left;
 }
 
-.node-listing-form .field-name-field-listing-measurements {
+.node-listing-form .rooms {
   display: none;
+  display: block;
 }
 .node-listing-form .field-name-field-listing-measurements td,
 .node-listing-form .rooms td {
