--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -13,17 +13,11 @@
   float: left;
 }
 
-.node-listing-form .rooms {
-  display: none;
-  display: block;
-}
-.node-listing-form .field-name-field-listing-measurements td,
-.node-listing-form .rooms td {
+.node-listing-form .field-name-field-listing-measurements td {
   padding: 5px;
   max-width: 100px;
 }
-.node-listing-form .field-name-field-listing-measurements td:first-child,
-.node-listing-form .rooms td:first-child {
+.node-listing-form .field-name-field-listing-measurements td:first-child {
   width: 20%;
   font-weight: bold;
   text-align: right;
