Fixing font order for printer-freintly

--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_general.scss
@@ -4,7 +4,7 @@
 
 
 body {
-  font-family: 'Muli', 'Hevetica', 'Arial';
+  font-family: 'Muli', 'Hevetica', 'Verdana', 'Arial';
   background: $color_gray_dark;
 }
 
