--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -16,6 +16,11 @@ $grids: 12;
 $gutters: 1/4;
 $output: 'isolation';
 
+body.printer-friendly {
+  font-family: 'Verdana', 'Arial', 'Muli', 'Hevetica';
+  background: $color_gray_dark;
+}
+
 #logo {
   @include replace-text('../images/c21hull_logo.svg');
 
