Fixing font order for printer-freintly - take II

--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -17,8 +17,7 @@ $gutters: 1/4;
 $output: 'isolation';
 
 body.printer-friendly {
-  font-family: 'Verdana', 'Arial', 'Muli', 'Hevetica';
-  background: $color_gray_dark;
+  font-family: 'Arial', 'Verdana', 'Muli', 'Hevetica';
 }
 
 #logo {
