--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -17,7 +17,7 @@ $gutters: 1/4;
 $output: 'isolation';
 
 body.printer-friendly {
-  font-family: 'Arial', 'Verdana', 'Muli', 'Hevetica';
+  font-family: 'DejaVuSans', 'DejaVu', 'Arial', 'Verdana', 'Muli', 'Hevetica';
 }
 
 #logo {
