--- a/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
+++ b/docroot/sites/all/modules/custom/c21_listings/css/c21_listings_forms.css
@@ -71,6 +71,8 @@
 }
 .node-listing-form .group-listing-buysell h3 {
   border-bottom: 1px solid #999999;
+  border-left: 5px solid #999999;
+  padding-left: .25em;
   margin-left: -1em;
 }
 
