--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -99,6 +99,10 @@ $output: 'isolation';
             white-space: normal;
           }
         }
+        .field-label {
+          width:  100%;
+          text-align: left;
+        }
       }
       &.field-name-field-listing-photos {
         @include clearfix();
@@ -178,6 +182,10 @@ $output: 'isolation';
       margin-right: 0;
     }
     */
+
+    .group-print-notes {
+      margin-top:  2em;
+    }
 
     .group-print-seller-info,
     .group-print-sellers {
