--- a/docroot/sites/all/themes/escrow/sass/partials/components/header/_logo.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/header/_logo.scss
@@ -2,7 +2,7 @@
   display: block;
   @include float-span(2, 'first');
   width: 140px;
-  height: 110px;
+  height: 130px;
   background-size: contain;
   @include replace-text('../images/c21hull_logo_white.svg');
 
@@ -13,12 +13,16 @@
   @include breakpoint($bp400) {
     @include float-span(3, 'first');
     width: 160px;
-    height: 110px;
+    height: 130px;
   }
 
   .lt-ie9 & {
     background-image: url('../images/c21hull_logo_white_ie.png');
     @include float-span(3, 'first');
     width: 160px;
+  }
+
+  @include breakpoint($bp650) {
+    height: 140px;
   }
 }
