Clearing form on listing pages

--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_listing.scss
@@ -213,7 +213,7 @@
       }
 
       form {
-        clear: left;
+        clear: both;
         padding:  $spacing_default;
         margin: $spacing_default 0;
         background-color: white;
