Making "owner" headshots smaller on "our agents" page

--- a/docroot/sites/all/themes/escrow/sass/partials/components/general/_agents.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/general/_agents.scss
@@ -42,6 +42,9 @@
     }
   }
   .view-display-id-owners {
+    max-width:  680px;
+    margin: 0 auto;
+
     .headshot img {
       width: 100%;
     }
