--- a/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
+++ b/docroot/sites/all/themes/escrow/sass/printer-friendly.scss
@@ -42,6 +42,7 @@ $output: 'isolation';
 
     .group-left {
       @include float-span(5);
+      min-height:  120em; /* Needed so the slogan will appear at the very bottom of page 1 */
     }
     .group-right {
       @include float-span(7, 'last');
@@ -143,6 +144,15 @@ $output: 'isolation';
         min-width: 8em;
         height: 1.75em;
       }
+    }
+
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      position: absolute;
+      top: 127em;
+      left:  0;
+      right:  0;
     }
 
     .offices {
